css/style.css
/* ... */
/*--------------------------------------------------------*/
/*------------------------NOTIFICATIONS BUBBLE --------------------------*/
/*--------------------------------------------------------*/

.bubble {
    background-color: var(--base-color);
    color: white;
    border-radius: 200px;
    /*width: 5px;*/
    height: 5px;
    font-size: 40%;
    padding: 3px;
}

.cart-bubble-text,
.user-bubble-text {
    position: absolute;
    padding: 5px 7px 5px 7px;
    height: auto;
}

.cart-bubble-text:hover,
.user-bubble-text:hover {
    background-color: var(--base-color-dark);
}

.offers-bubble-text {
    background-color: var(--white-color);
    color: var(--base-color-dark);
    margin-left: 30%;
    position: absolute;
    padding: 5px 7px 5px 7px;
    font-size: 60%;
    height: auto;
}
.offers-bubble-text:hover{
    background-color: var(--secondary-color);
    color: var(--pure-black-color);
}
/*--------------------------------------------------------*/
/*------------------------ICONS--------------------------*/
/*--------------------------------------------------------*/

.ion-ios-cart-outline,
.ion-ios-contact-outline {
    color: var(--white-color);
    font-size: 35px;
}

.ion-ios-cart-outline:hover,
.ion-ios-contact-outline:hover {
    color: var(--secondary-color);
    transition: background-color 0.3s;
}

.ui-icon {
    color: var(--white-color);
}


/*----------------------------------------------------------------*/
/*------------------------DROP-DOWN MENU--------------------------*/
/*----------------------------------------------------------------*/

.dropdown-content {
    position: relative;
}

.dropdown-options {
    position: absolute;
    right: 0px;
    top: 0px;
    border-radius: 3px;
    text-decoration: none;
    color: var(--white-color);
    background-color: var(--base-color);
    width: 230px;
}

.dropdown-options li {
    list-style: none;
    padding: 13px 15px;
}

.dropdown-options li i {
    margin-right: 10px;
}

.dropdown-options li:hover {
    background-color: var(--base-color-dark);
    border-left: 5px solid var(--secondary-color);
    transition: background-color 0.3s, border-left-width 0.5s;
}

.navbar-dropdown {
    padding: 0px 10px;
}

/*----------------------------------------------------------------*/
/*------------------------FEATURES SECTION--------------------------*/
/*----------------------------------------------------------------*/

.features {
    display: flex;
}

.box {
    display: inline-block;
    text-align: center;
    background-color: white;
    padding: 20px;
    border-radius: 10px;
}

.heading-3 {
    font-size: 110%;
    margin-top: 10px;
    margin-bottom: 20px;
    letter-spacing: normal;
}

.feature-heading-section {
    text-align: center;
    padding: 30px 0px;
}

.heading-2 {
    margin-bottom: 20px;
    margin-top: 70px;
    font-size: 180%;
}

.heading-2:after {
    content: "";
    height: 2px;
    display: block;
    background-color: var(--secondary-color);
    width: 100px;
    margin: 20px auto;

}

.section-features p {
    line-height: 145%;
    font-size: 90%;
}

.feature-long-text {
    width: 70%;
    margin-left: 15%;
}

.section-features i {
    font-size: 300%;
    color: var(--base-color);
    margin-bottom: 10px;
    word-spacing: 2px;
}

.section-features i:hover {
    color: var(--base-color-dark);
    font-size: 303%;
}

/*----------------------------------------------------------------*/
/*------------------------GALLERY SECTION--------------------------*/
/*----------------------------------------------------------------*/
.section-favourite-meals {
    text-align: center;
}

.category-heading {
    margin-top: 20px;
}

.favourite-meals-heading {
    text-align: center;
}

.galley-image {
    width: 100%;
    height: auto;
    transform: scale(1);
    background-color: black;
    opacity: 0.8;
}

.galley-image:hover {
    transform: scale(1.3);
    transition: transform 0.5s;
    width: 100%;
    height: auto;
    opacity: 0.4;
}

.zoom-image {
    transform: scale(1.3);
    transition: transform 0.5s;
    width: 100%;
    height: auto;
    opacity: 0.4;
}

.image-caption {
    width: 100%;
    height: 100%;
    margin-top: 0px;
    margin-bottom: 0px;
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
    color: var(--white-color);
    font-size: 120%;
    position: absolute;
    z-index: 2;
    text-align: center;
    display: flex;
    justify-content: center; /*horizonatally align at center*/
    align-items: center; /*vertically align at center*/
}

.section-favourite-meals ul {
    width: 100%;
    list-style: none;
    display: block;
}

.section-favourite-meals li {
    display: inline-block;
}

.section-favourite-meals img {
    display: block;
}

.section-favourite-meals figure {
    margin: 0px;
    width: 100%;
    overflow: hidden;
    background-color: black;
    position: relative;
}

/*Gallery Media Queries*/

@media only screen and (max-width: 900px) and (min-width: 600px) {
    .section-favourite-meals li {
        display: inline-block;
        width: 47%;
    }
}

@media only screen and (max-width: 600px) {
    .section-favourite-meals li {
        display: inline-block;
        width: 100%;
        margin-bottom: 5px;
    }
}

